--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         </label>
         
         <label for="business-account">
-          <input id="business-account" type="radio" name="account-type" classs="inline" /> Business Account
+          <input id="business-account" type="radio" name="account-type" class="inline" /> Business Account
         </label>
 
         <label for="terms-and-conditions">
-          <input id="terms-and-conditions" name="terms-and-conditions" type="checkbox" class="inline" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+          <input id="terms-and-conditions" name="terms-and-conditions" type="checkbox" class="inline" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/" target="_blank">terms and conditions</a>
         </label>
 
       </fieldset> 
